infra/gcp/gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claritas-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: claritas-web
  template:
    metadata:
      labels:
        app: claritas-web
    spec:
      containers:
        - name: claritas-web
          image: gcr.io/claritas-457808/claritas-web:v1  # Change this to your image
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: claritas-web-service
spec:
  selector:
    app: claritas-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
